--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                    <head> 
                     <style>
                         body {
-                          background-image: url('file:///C:/Users/Suraj%20Guvaju/OneDrive/Desktop/suraj.jpg');
+                          background-image: url('suraj.jpg');
                           background-repeat: no-repeat;
                           background-attachment: fixed;
                           background-position: center;
