--- a/intro.html
+++ b/intro.html
@@ -24,11 +24,11 @@
           
             <nav>
                 <ul>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/index.html">Home</a> </li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/intro.html">My Intro</a></li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/services.html">Gallery</a></li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/blog.html">Blog</a></li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/contact.html">Contact Me</a></li>
+                  <li><a href="index.html">Home</a> </li>
+                  <li><a href="intro.html">My Intro</a></li>
+                  <li><a href="services.html">Gallery</a></li>
+                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="contact.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
@@ -46,7 +46,7 @@
             </div> -->
             <div class="intro">
             <h1 style="margin-left: 460px;">About Me</h1>
-            <img src="C:\Users\Suraj Guvaju\OneDrive\Desktop\surajguvaju.jpg" alt="It's Me">
+            <img src="surajguvaju.jpg" alt="It's Me">
             <p><b>Innovation is my life .I am ready to do eveything it undertakes  to reach one step further than yesterday.
          Coding is my beloved friend that I love so much.It is my passion and moving ahead with it to climb
          hill. </b>  </p>
