--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
           
             <nav>
                 <ul>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/index.html">Home</a> </li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/intro.html">My Intro</a></li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/services.html">Gallery</a></li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/blog.html">Blog</a></li>
-                  <li><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/contact.html">Contact Me</a></li>
+                  <li><a href="index.html">Home</a> </li>
+                  <li><a href="intro.html">My Intro</a></li>
+                  <li><a href="services.html">Gallery</a></li>
+                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="contact.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
