--- a/blog.html
+++ b/blog.html
@@ -7,12 +7,8 @@
              <link rel="stylesheet" href="style.css">
                    <head> 
                        <style>
-                    body{
-                        );
-                        background-repeat: no-repeat;
-                        background-attachment: fixed;
-                        background-position: center;
-                      background-size: cover}
+                    body{background-color: #9acd3266;
+              }
                       p{
                           margin-left:15px;
                       }
