--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,8 @@
     border-bottom-right-radius: 65px;
     border-top-right-radius: 65px;
     border-top-left-radius: 65px;
-    margin-left: 450px;
+    margin-left: 90px;
+    position:relative;                               
                            }
                            
                        </style> </head>
@@ -45,12 +46,12 @@
             <img class="cross" src="C:\Users\Suraj Guvaju\Desktop\cross.jpg" alt="cross" width="23px">
             </div> -->
             <div class="intro">
-            <h1 style="margin-left: 460px;">About Me</h1>
+            <h1 style="margin-left: 107px;">About Me</h1>
             <img src="surajguvaju.jpg" alt="It's Me">
             <p><b>Innovation is my life .I am ready to do eveything it undertakes  to reach one step further than yesterday.
          Coding is my beloved friend that I love so much.It is my passion and moving ahead with it to climb
          hill. </b>  </p>
-            <h2 style="margin-left:460px;margin-top:50px">My Skills</h2>
+            <h2 style="margin-left:90px;margin-top:50px">My Skills</h2>
                 <div class="skillcontainer">
                     <div class="skillfield programming" style="margin-left:50px ;">    
                         <div style="margin-left: 20px;font-size: 25px;"><b>Programming</b></div>
