--- a/intro.html
+++ b/intro.html
@@ -48,7 +48,7 @@
             <div class="intro">
             <h1 style="margin-left: 107px;">About Me</h1>
             <img src="surajguvaju.jpg" alt="It's Me">
-            <p><b>Innovation is my life .I am ready to do eveything it undertakes  to reach one step further than yesterday.
+            <p style="width:60vw"><b>Innovation is my life .I am ready to do eveything it undertakes  to reach one step further than yesterday.
          Coding is my beloved friend that I love so much.It is my passion and moving ahead with it to climb
          hill. </b>  </p>
             <h2 style="margin-left:90px;margin-top:50px">My Skills</h2>
