--- a/services.html
+++ b/services.html
@@ -174,9 +174,7 @@
 
                <div class="photo" style="height: 100vh;">
                 <div class="showphoto">
-                    <h2 style="align-items: center;
-                    margin-left: 140px;
-                    font-family: monospace;margin-top: -985px;">Click on above photo to view in large size.</h2>
+                    <h2 style="align-items: center;margin-left: 100px;font-family: monospace;margin-top: -985px;">Click on above photo to view in large size.</h2>
                 </div>
             
             <div id="picture"  class="picture0" > </div>
