--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
                                justify-content: space-around;
                                }
                        </style>  </head>
-<body style="background-color: #9acd3266;">
+<body >
     <div class="container" style="background-color: #9acd3266;">
         <div class="sidebar sidebargo" style="background-color: #0c561c26;">
           
