--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 </ul>
             </nav>
         </div>
-        <div class="main" >
+        <div class="main" style="background-image: url('suraj.JPG');
+                          background-repeat: no-repeat;
+                          background-attachment: fixed;
+                          background-position: center;
+                        background-size: cover" >
           <div class="menubar" onclick="myFunction(this)">
             <div class="bar1"></div>
             <div class="bar2"></div>
