--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
                                }
                        </style>  </head>
 <body >
-    <div class="container" style="background-color: #9acd3266;">
+    <div class="container" >
         <div class="sidebar sidebargo" style="background-color: #0c561c26;">
           
             <nav>
@@ -85,7 +85,7 @@
                 </ul> 
             </nav>
         </div>
-        <div class="main">
+        <div class="main" style="background-color: #9acd3266;">
             <div class="menubar" onclick="myFunction(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
