--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
              <link rel="stylesheet" href="style.css">
                    <head> 
                     <style>
-                        body {
-                          background-image: url('suraj.JPG');
-                          background-repeat: no-repeat;
-                          background-attachment: fixed;
-                          background-position: center;
-                        background-size: cover}
+                      
                           </style> 
                     
                    </head>
@@ -52,12 +47,12 @@
                          <div class="hello">Hi I am</div>
                          <div class="name">Suraj Guvaju</div>
                          <div class="about">Developer,Student</div>
-                         <div class="aboutmore">I am an enthusiastic learner and able to do anything
+                         <div class="aboutmore" style="margin-left:3px">I am an enthusiastic learner and able to do anything
                              that call upon us. I live in Nepal and have been very fond of playing games.
                                </div>
                          <div class="buttons">
-                            <button><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/cv.txt" target="_blank">Download CV</a></button>
-                            <button><a href="file:///C:/Users/Suraj%20Guvaju/OneDrive/Documents/portfolio/contact.html">Contact Me</a></button>
+                            <button><a href="cv.txt" target="_blank">Download CV</a></button>
+                            <button><a href="contact.html">Contact Me</a></button>
                          </div>
                     </div>
                    <!--<div class="surajpic"><img src="C:\Users\Suraj Guvaju\Desktop\suraj.jpg" alt="Suraj Guvaju" ></div>-->
