--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                     
                    </head>
                    <body>
-        <div class="container"  >
+        <div class="container" style="background-image: url('suraj.JPG');
+                          background-repeat: no-repeat;
+                          background-attachment: fixed;
+                          background-position: center;
+                        background-size: cover" >
         <div class="sidebar sidebargo">
           
             <nav>
