--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                           background-repeat: no-repeat;
                           background-attachment: fixed;
                           background-position: center;
-                                    background-size: cover}
+                                    background-size: cover;}
                       
                           </style> 
                     
@@ -30,11 +30,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="main" style="background-image: url('suraj.JPG');
-                          background-repeat: no-repeat;
-                          background-attachment: fixed;
-                          background-position: center;
-                        background-size: cover" >
+        <div class="main"  >
           <div class="menubar" onclick="myFunction(this)">
             <div class="bar1"></div>
             <div class="bar2"></div>
