--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
              <link rel="stylesheet" href="style.css">
                    <head> 
                     <style>
-                            .body{background-image: url('suraj.JPG');
+                            body{background-image: url('suraj.JPG');
                           background-repeat: no-repeat;
                           background-attachment: fixed;
                           background-position: center;
