--- a/services.html
+++ b/services.html
@@ -70,6 +70,7 @@
                                margin-top: 0px;
                                justify-content: space-around;
                                }
+                               body{background-color:#9acd3266;
                        </style>  </head>
 <body >
     <div class="container" >
@@ -85,7 +86,7 @@
                 </ul> 
             </nav>
         </div>
-        <div class="main" style="background-color: #9acd3266;">
+        <div class="main">
             <div class="menubar" onclick="myFunction(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
